style.css
/* ... */
/* .image-window{
  position: absolute;
  padding: 29rem 0rem 0rem 62rem;
  z-index: 6;
} */

body, .hero_heading, .tracks-window, .info-window, .rectangle, .body-text, .image-window {
  transition: all 0.3s ease; 
}
@media (max-width: 1300px){
  .hero_heading {
    font-size: 5rem;
    -webkit-text-stroke: 0.15rem #000;
    margin: -10rem 0rem 0rem -25rem;
    text-shadow: 0.12rem 0.2rem 0 #000;
    letter-spacing: 0.2rem;
}
  .page_no{
    font-size: 35px;
    margin: -10rem 0rem 0rem 20rem;
  }
}

@media (max-width: 1260px){
  .hero_heading {
    font-size: 4rem;
    -webkit-text-stroke: 0.15rem #000;
    margin: -10rem 0rem 0rem -22rem;
    text-shadow: 0.12rem 0.2rem 0 #000;
    letter-spacing: 0.2rem;
}
  .page_no{
    font-size: 35px;
    margin: -10rem 0rem 0rem 20rem;
  }
  .info-window {
    height: 30.0625rem;
  }
  .tracks-window {
    margin: -19rem 0rem 0rem -23rem;
    height: 24.1875rem;
    z-index: 3;
  }
  .track-rectangle1 {
    height: 5rem;
    margin: -22.4rem 0rem 0rem -0.8rem;
  }
  .track-rectangle2 {
    height: 5rem;
    margin: -0.4rem 0rem 0rem -0.8rem;
  }
  .track-rectangle3 {
    height: 5rem;
    margin: -0.2rem 0rem 0rem -0.8rem;
  }
  .body-text{
    font-size: 17px;
    width: 320px;
    margin: -25rem 0rem 0rem 3rem;
  }
}
@media (max-width: 780px){
  .hero_heading {
    font-size: 4rem;
    margin: -10rem 0rem 0rem -16rem;
    text-shadow: 0.13rem 0.2rem 0 #000;
    letter-spacing: 0.2rem;
}
.page_no{
  font-size: 32px;
  margin: -10rem 0rem 0rem 14rem;
}
  .tracks-window {
    margin: -12rem 0rem 0rem -19rem;
    height: 20.1875rem;
    z-index: 3;
  }
  .track-rectangle1 {
    height: 4.185rem;
    margin: -18.635rem 0rem 0rem -0.7rem;
  }
  .track-rectangle2 {
    height: 4.185rem;
    margin: -0.4rem 0rem 0rem -0.7rem;
  }
  .track-rectangle3 {
    height: 4.185rem;
    margin: -0.2rem 0rem 0rem -0.7rem;
  }
  #track-txt{
    font-size: 0.8rem;
  }
  #drop-down{
    font-size: 3.3rem;
  }
  .body-text{
    font-size: 15px;
    width:280px;
    margin: -24rem 0rem 0rem 3rem;

  }

}
@media (max-width: 640px) {
  .hero_heading {
      font-size: 3rem;
      -webkit-text-stroke: 0.1rem #000;
      margin: -10rem 0rem 0rem -13rem;
  }
  .page_no{
    font-size: 30px;
    margin: -10rem 0rem 0rem 10rem;
  }
  .tracks-window {
      height: 17.1875rem;
      margin: -30rem 0rem 0rem -12rem;
  }
  .info-window {
      height: 22.0625rem;
      margin: -12rem 0rem 0rem -7rem;
  }
  /* .image-window{
      padding: 28rem 0rem 0rem 49rem;
  } */
  .track-rectangle1{
      height: 3.56rem;
      margin: -15.9rem 0rem 0rem -0.67rem;
  }
  .track-rectangle2{
      height: 3.56rem;
      margin: -0.1rem 0rem 0rem -0.67rem;
  }
  .track-rectangle3{
      height: 3.56rem;
      margin: -0.1rem 0rem 0rem -0.67rem;
  }
  .body-text {
      font-size: 13px;
      width: 250px;
      margin: -19rem 0rem 0rem 2rem;
  }
  #track-txt{
      font-family: 'Press Start 2P';
      color: #FFF;
      position: absolute;
      letter-spacing: 0.2rem;
      font-size: 0.6rem;
      top: 50%;
      left: 25%;
      transform: translate(-35%, -50%);
      z-index: 5;
  }
  #drop-down{
      font-size: 2.7rem;
      transform: translate(-230%, -50%);

  }
}


/* ---------------------------------------- ABOUT SECTION BEGINS HERE --------------------------------------------- */
#about-text {
  font-family: 'Bangers', sans-serif;
  color: #e82338;
  text-shadow: 5px 5px black;
  -webkit-text-stroke: 4px black;
  font-size: 7rem;
  position: absolute;
  left: 17%;
  width: 13%;
  margin-top: 0%;
  margin-bottom: 0%;
  top: 62px;
  z-index: 1;
}

#zero-one {
  font-family: 'Japanese Robot', sans-serif;
  color: #e82338;
  margin-top: 0%;
  margin-bottom: 0%;
  position: relative;
  font-size: 3rem;
  top: 19px;
  left: 79%;
  -webkit-text-stroke: 4px black;
  width: 6%;
}

#main-paragraph {
  font-family: 'Kosugi Maru', sans-serif;
  margin-top: 0%;
  margin-bottom: 0%;
  width: 25%;
  color: white;
  z-index: 1;
  position: relative;
  top: 200px;
  left: 19%;
  line-height: 1.5;
}

#images {
  display: flex;
  flex-direction: row;
  left: 14%;
  position: relative;
  width: 38%;
  top: -382px;
}

#GreenBG, #Group39 {
  width: 100%;
}

#Group39 {
  position: relative;
  left: -16%;
  top: 3rem;
}

#about {
  width: 97vw;
  position: relative;
  height: 46vw;
}

@media (max-width: 1362px) {
  #about-text {
      font-size: 6rem;
      left: 18%;
      top: 62px;
  }

  #main-paragraph {
      top: 164px;
  }

  #images {
      top: -412px;
  }
}

@media (max-width: 1293px) {
  #about-text {
      font-size: 5.5rem;
  }

  #main-paragraph {
      font-size: 0.8rem;
  }

  #images {
      top: -283px;
  }
}

@media screen and (max-width: 1239px) {
  #images {
      top: -302px;
  }
}

@media (max-width: 1167px) {
  #about-text {
      font-size: 5rem;
  }

  #zero-one {
      font-size: 2.5rem;
  }

  #main-paragraph {
      top: 144px;
  }
}

@media (max-width: 1095px) {
  #about-text {
      font-size: 4.5rem;
      top: 49px;
  }

  #zero-one {
      font-size: 2.2rem;
  }

  #main-paragraph {
      top: 124px;
  }

  #images {
      top: -332px;
  }
}

@media screen and (max-width: 1024px) {
  #about-text {
      font-size: 4rem;
      top: 49px;
  }

  #zero-one {
      font-size: 2rem;
  }

  #main-paragraph {
      top: 104px;
  }

  #images {
      top: -347px;
  }
}

@media screen and (max-width: 960px) {
  #about-text {
      font-size: 3.5rem;
      top: 49px;
  }

  #zero-one {
      font-size: 1.8rem;
  }

  #main-paragraph {
      top: 109px;
      font-size: 0.7rem;
  }

  #images {
      top: -276px;
  }
}

@media screen and (max-width: 900px) {
  #about-text {
      font-size: 3rem;
      top: 49px;
  }

  #zero-one {
      font-size: 1.6rem;
  }

  #main-paragraph {
      top: 114px;
      font-size: 0.6rem;
  }

  #images {
      top: -220px;
  }
}

@media screen and (max-width: 870px) {
  #about-text {
      top: 60px;
  }
}
/* ... */

